Active shape key gets lost upon edit mode undo #96205

Closed
opened 2022-03-06 21:13:20 +01:00 by Dvorakir · 7 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: version: 3.1.0 Release Candidate, branch: master, commit date: 2022-03-04 14:21, hash: 45079b169d
Worked: 3.0.0

Short description of error
The active shape key data is lost whenever undo is used in edit mode, resetting the mesh to basis.
Happens both with Relative enabled and disabled.
There doesn't seem to be any way to get the shape key back other than loading an older save; redo does not help.

Exact steps for others to reproduce the error
based on the default scene:

  1. add two shape keys to the default cube
  2. make some edits in Key 1
  3. undoing while in edit mode removes all edits in the shapekey

blender_2022-03-06_21-03-31.mp4

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: version: 3.1.0 Release Candidate, branch: master, commit date: 2022-03-04 14:21, hash: `45079b169d` Worked: 3.0.0 **Short description of error** The active shape key data is lost whenever undo is used in edit mode, resetting the mesh to basis. Happens both with Relative enabled and disabled. There doesn't seem to be any way to get the shape key back other than loading an older save; redo does not help. **Exact steps for others to reproduce the error** based on the default scene: 1. add two shape keys to the default cube 2. make some edits in Key 1 3. undoing while in edit mode removes all edits in the shapekey [blender_2022-03-06_21-03-31.mp4](https://archive.blender.org/developer/F12899793/blender_2022-03-06_21-03-31.mp4)
Author

Added subscriber: @Dvorakir

Added subscriber: @Dvorakir
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report.
I can confirm on current master. I suspect issue came with d961adb866
Will bisect just to be sure

Hi, thanks for the report. I can confirm on current master. I suspect issue came with d961adb866 Will bisect just to be sure
Campbell Barton self-assigned this 2022-03-07 07:48:38 +01:00
Member

Pointed to the same commit. @ideasman42 , can you take a look?
Fix is also important for 3.1 I think.

(edit: Campbell has already seen the task. I forgot to refresh the page before commenting...)

Pointed to the same commit. @ideasman42 , can you take a look? Fix is also important for 3.1 I think. (edit: Campbell has already seen the task. I forgot to refresh the page before commenting...)

This issue was referenced by 72e20785e1

This issue was referenced by 72e20785e1e2ed7b15a9765ebb6df646fd32dbff

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:44 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96205
No description provided.